--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Backend for Reality League HQ",
+  "main": "app.js",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
@@ -7,5 +11,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
-  }
+  },
+  "scripts": {
+    "start": "node app.js"
+  },
+  "author": "Meagan Mahan",
+  "license": "MIT"
 }
